--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "redound/phalcon-rest",
+    "name": "alexsibtihon/phalcon-rest",
     "description": "Phalcon REST Library",
     "require": {
         "php": ">=5.4",
